--- a/src/components/FeedItem.css
+++ b/src/components/FeedItem.css
@@ -36,6 +36,10 @@
     color: orangered;
 }
 
+.feedItem .attachment {
+    margin-top: 5px;
+}
+
 .feedControlBar .feedItemAdd {
     float: left;
 }
