--- a/src/components/FeedItem.css
+++ b/src/components/FeedItem.css
@@ -14,6 +14,10 @@
     float: left;
 }
 
+.feedItem .progress {
+    margin-bottom: 13px;
+}
+
 .feedItem .uncollapsed-footer {
     text-align: right;
 }
